# ClockTails

./: CMakeLists.txt  CTController.cpp  CTController.hpp  CTControllerIface.hpp  CTFeedBack.hpp  CTInputOutput.hpp  CTModelIface.hpp  CTObserver.cpp  CTObserver.hpp  ClockTail.cpp  ClockTail.hpp  ClockTailComponents.cpp  ClockTailComponents.hpp  ClockTailGenerator.cpp  ClockTailGenerator.hpp  CombinationSet.cpp  CombinationSet.hpp  FeedBack.cpp  FeedBack.hpp  History.cpp  History.hpp  InputFile.cpp  InputFile.hpp  MenuStructure.cpp  MenuStructure.hpp  NotImplementedException.hpp  RandomClockTailGenerator.cpp  RandomClockTailGenerator.hpp  Selector.cpp  Selector.hpp  SelectorRandom.cpp  SelectorRandom.hpp  StringHash.hpp  TextView.cpp  TextView.hpp  clocktails.cpp
examples/: mixers1.txt  names1.txt  names2.txt  spirits1.txt
tests/: CMakeLists.txt  TestCombinationSet.cpp
